force-app/main/default/objects/Salesforce_Change_Request__c/Salesforce_Change_Request__c.object-meta.xml
<CustomObject>
    <description>Form specifically for managing Development, Admin work and changes within the Salesforce Service Org</description>
    <label>Salesforce Change Request</label>
    <nameField>
        <displayFormat>SCR{000000}</displayFormat>
        <label>Salesforce Change Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>