force-app/main/default/objects/Salesforce_Change_Request__c/fields/Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Criteria__c</fullName>
    <inlineHelpText>What is the expected outcome and minimum viable product</inlineHelpText>
    <label>Acceptance Criteria</label>
    <type>TextArea</type>
</CustomField>