force-app/main/default/objects/Salesforce_Change_Request__c/fields/Actual_FTE__c.field-meta.xml
<CustomField>
    <fullName>Actual_FTE__c</fullName>
    <inlineHelpText>Calculate this in Hours. ~1 day is 7.5 hours</inlineHelpText>
    <label>Actual FTE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>