force-app/main/default/objects/Salesforce_Change_Request__c/fields/Any_key_milestones__c.field-meta.xml
<CustomField>
    <fullName>Any_key_milestones__c</fullName>
    <inlineHelpText>We can use these in sprint as Tasks to chase</inlineHelpText>
    <label>Any Key Milestones</label>
    <type>TextArea</type>
</CustomField>