force-app/main/default/objects/Salesforce_Change_Request__c/fields/Are_new_users_required__c.field-meta.xml
<CustomField>
    <fullName>Are_new_users_required__c</fullName>
    <label>New Users Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>