force-app/main/default/objects/Salesforce_Change_Request__c/fields/Assigned_Developer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Developer__c</fullName>
    <label>Assigned Developer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Akshay Aringale</fullName>
            </value>
            <value>
                <fullName>Alex Matheakis</fullName>
            </value>
            <value>
                <fullName>Christopher Baily</fullName>
            </value>
            <value>
                <fullName>David Johnston</fullName>
            </value>
            <value>
                <fullName>Harish Patil</fullName>
            </value>
            <value>
                <fullName>Lavanya Muralidharan</fullName>
            </value>
            <value>
                <fullName>Mahender Reddy</fullName>
            </value>
            <value>
                <fullName>Prashanth Srinivasa</fullName>
            </value>
            <value>
                <fullName>Preeti Biradar</fullName>
            </value>
            <value>
                <fullName>Rohan Kalyankar</fullName>
            </value>
            <value>
                <fullName>Sheethal M</fullName>
            </value>
            <value>
                <fullName>Somesh Koluramath</fullName>
            </value>
            <value>
                <fullName>Alan Wragg</fullName>
                <isActive>false</isActive>
                <label>Alan Wragg</label>
            </value>
            <value>
                <fullName>Andrew Chapman</fullName>
                <isActive>false</isActive>
                <label>Andrew Chapman</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>