force-app/main/default/objects/Salesforce_Change_Request__c/fields/Budget_or_R_Code__c.field-meta.xml
<CustomField>
    <fullName>Budget_or_R_Code__c</fullName>
    <label>Budget or R-Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>