force-app/main/default/objects/Salesforce_Change_Request__c/fields/Change_Control_Category__c.field-meta.xml
<CustomField>
    <fullName>Change_Control_Category__c</fullName>
    <label>Change Control Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low (No Change Control Req)</fullName>
                <default>true</default>
                <label>Low (No Change Control Req)</label>
            </value>
            <value>
                <fullName>Medium (Auto Change)</fullName>
            </value>
            <value>
                <fullName>High (Full Change Control)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>