force-app/main/default/objects/Salesforce_Change_Request__c/fields/Change_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Change_Control_Number__c</fullName>
    <label>Change Control Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>