force-app/main/default/objects/Salesforce_Change_Request__c/fields/Change_Set_component_list__c.field-meta.xml
<CustomField>
    <fullName>Change_Set_component_list__c</fullName>
    <inlineHelpText>(Optional) fill this with the components you need to include in a change set</inlineHelpText>
    <label>Change Set Component List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>