force-app/main/default/objects/Salesforce_Change_Request__c/fields/Changes_applicable_for_Change_Set__c.field-meta.xml
<CustomField>
    <fullName>Changes_applicable_for_Change_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the changes you are doing are applicable for including in a change set</inlineHelpText>
    <label>Changes Applicable for Change Set</label>
    <type>Checkbox</type>
</CustomField>