force-app/main/default/objects/Salesforce_Change_Request__c/fields/Days_to_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Resolve__c</fullName>
    <formula>IF(
    ISBLANK(Implementation_Date__c),
    NULL,
    (5 * FLOOR( (Implementation_Date__c - Request_Date__c + 1) / 7 )) +
    MIN(
        5,
        MOD(Implementation_Date__c - Request_Date__c + 1, 7) +
        MIN(WEEKDAY(Request_Date__c), 6) -
        MIN(WEEKDAY(Implementation_Date__c), 6)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Resolve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>