force-app/main/default/objects/Salesforce_Change_Request__c/fields/Days_to_Respond__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Respond__c</fullName>
    <formula>IF(
  ISBLANK(First_Response_date__c),
  NULL,
  IF(
    ISBLANK(Request_Date__c),
    NULL,
    (5 * FLOOR( (First_Response_date__c - Request_Date__c) / 7 )) +
    MIN(
      5,
      MOD(First_Response_date__c - Request_Date__c, 7) +
      MIN(WEEKDAY(Request_Date__c), 6) -
      MIN(WEEKDAY(First_Response_date__c), 6)
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Respond</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>