force-app/main/default/objects/Salesforce_Change_Request__c/fields/Expected_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Expected_Data_Type__c</fullName>
    <label>Expected Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Identifiable Data (PII)</fullName>
            </value>
            <value>
                <fullName>Sensitive Personal Data (SPI)</fullName>
            </value>
            <value>
                <fullName>Non-Personal Data (Non-PII)</fullName>
            </value>
            <value>
                <fullName>Pseudonymised Data</fullName>
            </value>
            <value>
                <fullName>Anonymised Data</fullName>
            </value>
            <value>
                <fullName>Confidential / Sensitive Business Data</fullName>
            </value>
            <value>
                <fullName>Public Data</fullName>
            </value>
            <value>
                <fullName>Operational / Technical Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>