force-app/main/default/objects/Salesforce_Change_Request__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <inlineHelpText>Please aim to gather feedback for changes significant business changes</inlineHelpText>
    <label>Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>