force-app/main/default/objects/Salesforce_Change_Request__c/fields/First_Response_date__c.field-meta.xml
<CustomField>
    <fullName>First_Response_date__c</fullName>
    <inlineHelpText>Date we acknowledged and responded to the requester.</inlineHelpText>
    <label>First Response Date</label>
    <type>Date</type>
</CustomField>