force-app/main/default/objects/Salesforce_Change_Request__c/fields/Functionality_Highlight__c.field-meta.xml
<CustomField>
    <fullName>Functionality_Highlight__c</fullName>
    <inlineHelpText>Any specific functionality that might need specific attention</inlineHelpText>
    <label>Functionality Required</label>
    <type>TextArea</type>
</CustomField>