force-app/main/default/objects/Salesforce_Change_Request__c/fields/Gearset_field_1__c.field-meta.xml
<CustomField>
    <fullName>Gearset_field_1__c</fullName>
    <label>Gearset field 1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>