force-app/main/default/objects/Salesforce_Change_Request__c/fields/Gearset_number__c.field-meta.xml
<CustomField>
    <fullName>Gearset_number__c</fullName>
    <label>Gearset number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>