force-app/main/default/objects/Salesforce_Change_Request__c/fields/Gearset_related_Third_Party_Case__c.field-meta.xml
<CustomField>
    <fullName>Gearset_related_Third_Party_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gearset related Third Party Case</label>
    <referenceTo>Third_Party_Case__c</referenceTo>
    <relationshipLabel>Salesforce Change Requests</relationshipLabel>
    <relationshipName>Salesforce_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>