force-app/main/default/objects/Salesforce_Change_Request__c/fields/High_Change_Scope_Defnition__c.field-meta.xml
<CustomField>
    <fullName>High_Change_Scope_Defnition__c</fullName>
    <defaultValue>&quot;Existing fields Currently connected to InRule | Code Optimisation/ Changes | New Buttons/ Macros | Code Search Tool changes (not Labels) | Apex Code/ Triggers | Data Deletion Tool&quot;</defaultValue>
    <inlineHelpText>Change components categorised as High</inlineHelpText>
    <label>High Change Scope Defnition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>