force-app/main/default/objects/Salesforce_Change_Request__c/fields/In_Sprint__c.field-meta.xml
<CustomField>
    <fullName>In_Sprint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Sprint?</label>
    <type>Checkbox</type>
</CustomField>