force-app/main/default/objects/Salesforce_Change_Request__c/fields/Low_Change_Scope_Defnition__c.field-meta.xml
<CustomField>
    <fullName>Low_Change_Scope_Defnition__c</fullName>
    <defaultValue>&quot;Field Changes | Help Text | Value Sets | Page / Lightning Layouts | Report / Dashboard | Profiles/ Permission Sets/ Roles | Validation Rules | List Views | Mandatory Fields | Email Notifications | Audit Tracking | Custom Labels&quot;</defaultValue>
    <inlineHelpText>Change components categorised as low</inlineHelpText>
    <label>Low Change Scope Defnition</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>