force-app/main/default/objects/Salesforce_Change_Request__c/fields/Medium_Change_Scope_Defnition__c.field-meta.xml
<CustomField>
    <fullName>Medium_Change_Scope_Defnition__c</fullName>
    <defaultValue>&quot;Record Type Labels | Sharing Rules | Organisation Wide Default settings | Process Builder/ Flows | Bulk Uploads | Email Templates&quot;</defaultValue>
    <inlineHelpText>Change components categorised as Medium</inlineHelpText>
    <label>Medium Change Scope Defnition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>