force-app/main/default/objects/Salesforce_Change_Request__c/fields/Name_of_Testers__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Testers__c</fullName>
    <label>Name of Testers</label>
    <type>TextArea</type>
</CustomField>