force-app/main/default/objects/Salesforce_Change_Request__c/fields/Named_stakeholders_for_sign_off__c.field-meta.xml
<CustomField>
    <fullName>Named_stakeholders_for_sign_off__c</fullName>
    <label>Sign‑off Stakeholders</label>
    <type>TextArea</type>
</CustomField>