force-app/main/default/objects/Salesforce_Change_Request__c/fields/NC_number__c.field-meta.xml
<CustomField>
    <fullName>NC_number__c</fullName>
    <label>INC Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>