force-app/main/default/objects/Salesforce_Change_Request__c/fields/Number_of_licenses_required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_licenses_required__c</fullName>
    <label>Number of Licenses Required</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>