force-app/main/default/objects/Salesforce_Change_Request__c/fields/Operational_Support__c.field-meta.xml
<CustomField>
    <fullName>Operational_Support__c</fullName>
    <label>Operational Support</label>
    <type>TextArea</type>
</CustomField>