force-app/main/default/objects/Salesforce_Change_Request__c/fields/Originating_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Originating_Sandbox__c</fullName>
    <label>Originating Sandbox</label>
    <length>50</length>
    <type>Text</type>
</CustomField>