force-app/main/default/objects/Salesforce_Change_Request__c/fields/Other_technology_or_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Other_technology_or_Integrations__c</fullName>
    <label>Technology/Integrations</label>
    <type>TextArea</type>
</CustomField>