force-app/main/default/objects/Salesforce_Change_Request__c/fields/Performance_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Performance_Expectations__c</fullName>
    <label>Performance Expectations</label>
    <type>TextArea</type>
</CustomField>