force-app/main/default/objects/Salesforce_Change_Request__c/fields/Predicted_FTE__c.field-meta.xml
<CustomField>
    <fullName>Predicted_FTE__c</fullName>
    <inlineHelpText>Calculate this in Hours. ~1 day is 7.5 hours</inlineHelpText>
    <label>Predicted FTE</label>
    <length>4</length>
    <type>Text</type>
</CustomField>