force-app/main/default/objects/Salesforce_Change_Request__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact Lookup</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Salesforce Change Requests (Primary Contact)</relationshipLabel>
    <relationshipName>Salesforce_Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>