force-app/main/default/objects/Salesforce_Change_Request__c/fields/Procurement_required__c.field-meta.xml
<CustomField>
    <fullName>Procurement_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procurement Required</label>
    <type>Checkbox</type>
</CustomField>