force-app/main/default/objects/Salesforce_Change_Request__c/fields/Query_Source__c.field-meta.xml
<CustomField>
    <fullName>Query_Source__c</fullName>
    <label>Query Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face to Face / Meeting</fullName>
            </value>
            <value>
                <fullName>Teams Message</fullName>
            </value>
            <value>
                <fullName>Salesforce Mailbox</fullName>
            </value>
            <value>
                <fullName>Service Now Request</fullName>
            </value>
            <value>
                <fullName>Salesforce Team</fullName>
            </value>
            <value>
                <fullName>Direct Contact</fullName>
            </value>
            <value>
                <fullName>Rules Mailbox</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>