force-app/main/default/objects/Salesforce_Change_Request__c/fields/Rationale_for_Priority__c.field-meta.xml
<CustomField>
    <fullName>Rationale_for_Priority__c</fullName>
    <inlineHelpText>What is the value to the Business? what problem is this solving?</inlineHelpText>
    <label>Rationale for Priority</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>