force-app/main/default/objects/Salesforce_Change_Request__c/fields/Related_Rule_Change__c.field-meta.xml
<CustomField>
    <fullName>Related_Rule_Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Rule Change</label>
    <referenceTo>Rule_Change__c</referenceTo>
    <relationshipName>Salesforce_Development_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>