force-app/main/default/objects/Salesforce_Change_Request__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <inlineHelpText>Enter a description of the change.</inlineHelpText>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>