force-app/main/default/objects/Salesforce_Change_Request__c/fields/Request_Subject__c.field-meta.xml
<CustomField>
    <fullName>Request_Subject__c</fullName>
    <label>Request Subject</label>
    <length>99</length>
    <type>Text</type>
</CustomField>