force-app/main/default/objects/Salesforce_Change_Request__c/fields/Request_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Request_Timeline__c</fullName>
    <label>Request Timeline</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>