force-app/main/default/objects/Salesforce_Change_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User/Permission Change</fullName>
            </value>
            <value>
                <fullName>Salesforce Overview or Training</fullName>
            </value>
            <value>
                <fullName>List View/Public Group</fullName>
            </value>
            <value>
                <fullName>Dashboard/Report Assistance</fullName>
            </value>
            <value>
                <fullName>Analysis, PoC and Planning</fullName>
            </value>
            <value>
                <fullName>Picklist Assistance</fullName>
            </value>
            <value>
                <fullName>Record Deletion/Recovery</fullName>
            </value>
            <value>
                <fullName>Data Changes</fullName>
            </value>
            <value>
                <fullName>Bulk Upload</fullName>
            </value>
            <value>
                <fullName>Validation Rules</fullName>
            </value>
            <value>
                <fullName>Page Changes incl. Layout, Fields and Record Types</fullName>
            </value>
            <value>
                <fullName>Email, Flows &amp; Processes</fullName>
            </value>
            <value>
                <fullName>Salesforce Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>