force-app/main/default/objects/Salesforce_Change_Request__c/fields/Requested_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Requested_Timeline__c</fullName>
    <inlineHelpText>What is the rough date you are wanting to have this delivered for?</inlineHelpText>
    <label>Requested Timeline</label>
    <type>Date</type>
</CustomField>