force-app/main/default/objects/Salesforce_Change_Request__c/fields/Requester_Department__c.field-meta.xml
<CustomField>
    <fullName>Requester_Department__c</fullName>
    <formula>Requester_Lookup__r.Department_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester Department</label>
    <type>Text</type>
</CustomField>