force-app/main/default/objects/Salesforce_Change_Request__c/fields/Requester_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Requester_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who gave us the request? (Employees - if external choose SF Developer)</inlineHelpText>
    <label>Requester Lookup</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Salesforce_Development_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>