force-app/main/default/objects/Salesforce_Change_Request__c/fields/Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_Name__c</fullName>
    <formula>Requester_Lookup__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester Name</label>
    <type>Text</type>
</CustomField>