force-app/main/default/objects/Salesforce_Change_Request__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <label>Risks</label>
    <type>TextArea</type>
</CustomField>