force-app/main/default/objects/Salesforce_Change_Request__c/fields/Rule_Change_Number__c.field-meta.xml
<CustomField>
    <fullName>Rule_Change_Number__c</fullName>
    <label>Rule Change Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>