force-app/main/default/objects/Salesforce_Change_Request__c/fields/Security_or_Compliance_highlight__c.field-meta.xml
<CustomField>
    <fullName>Security_or_Compliance_highlight__c</fullName>
    <label>Security or Compliance highlight</label>
    <type>TextArea</type>
</CustomField>