force-app/main/default/objects/Salesforce_Change_Request__c/fields/Sign_off_date__c.field-meta.xml
<CustomField>
    <fullName>Sign_off_date__c</fullName>
    <label>Sign Off Date</label>
    <type>Date</type>
</CustomField>