force-app/main/default/objects/Salesforce_Change_Request__c/fields/Target_audience__c.field-meta.xml
<CustomField>
    <fullName>Target_audience__c</fullName>
    <label>Target Audience?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>