force-app/main/default/objects/Salesforce_Change_Request__c/fields/Testing_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Testing_Requirements__c</fullName>
    <label>Testing Requirements</label>
    <type>TextArea</type>
</CustomField>