force-app/main/default/objects/Salesforce_Change_Request__c/fields/UAT_Cert_Attached__c.field-meta.xml
<CustomField>
    <fullName>UAT_Cert_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UAT Cert Attached</label>
    <type>Checkbox</type>
</CustomField>