force-app/main/default/objects/Salesforce_Change_Request__c/fields/UAT_Testing_Applicable__c.field-meta.xml
<CustomField>
    <fullName>UAT_Testing_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the change requires UAT testing</inlineHelpText>
    <label>UAT Testing Applicable</label>
    <type>Checkbox</type>
</CustomField>