force-app/main/default/objects/Salesforce_Change_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Requester_Name__c</columns>
    <columns>Request_Subject__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Assigned_Developer__c</columns>
    <columns>Days_to_Respond__c</columns>
    <columns>Days_to_Resolve__c</columns>
    <filterScope>Everything</filterScope>
    <label>1. All</label>
</ListView>