force-app/main/default/objects/Salesforce_Change_Request__c/listViews/Copy_of_2_Salesforce_Backlog.listView-meta.xml
<ListView>
    <fullName>Copy_of_2_Salesforce_Backlog</fullName>
    <columns>NAME</columns>
    <columns>Requester_Name__c</columns>
    <columns>Request_Subject__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Request_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>In_Sprint__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Development</value>
    </filters>
    <label>5. In Development</label>
</ListView>