force-app/main/default/objects/Salesforce_Change_Request__c/listViews/Salesforce_Solution_Design.listView-meta.xml
<ListView>
    <fullName>Salesforce_Solution_Design</fullName>
    <columns>NAME</columns>
    <columns>In_Sprint__c</columns>
    <columns>Requester_Name__c</columns>
    <columns>Request_Subject__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Assigned_Developer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Solution Design</value>
    </filters>
    <label>4. Salesforce Solution Design</label>
</ListView>