force-app/main/default/objects/Salesforce_Change_Request__c/listViews/Salesforce_Sprint.listView-meta.xml
<ListView>
    <fullName>Salesforce_Sprint</fullName>
    <columns>NAME</columns>
    <columns>Requester_Name__c</columns>
    <columns>Request_Subject__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Assigned_Developer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>In_Sprint__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>3. Salesforce Sprint</label>
</ListView>